# double-zero

./: .env  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml
actix-data-center/: Cargo.toml
actix-dc/: Cargo.toml
actix-push/: Cargo.toml
actix-websocket/: .env  .env.docker  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
actix-websocket-client/: Cargo.toml
actix-websocket-client/src/: actix_websocket_client.rs  actixwebsocket_client.rs  actixwebsocket_client_socketio.rs  entity.rs  main.rs  ws.rs  xtfw_client.rs
actix-websocket/proto/: account.proto  message.proto
actix-websocket/src/: application.rs  constants.rs  handler.rs  main.rs  reas.rs  server.rs  session.rs
actix-websocket/src/act/: cs.rs  mod.rs  redis.rs  session.rs  websocket.rs  ws.rs
actix-websocket/src/addr/: cs.rs  grpc.rs  mod.rs  rd.rs
actix-websocket/src/cache/: message.rs  mod.rs  red.rs
actix-websocket/src/entity/: event.rs  mod.rs  notification.rs
actix-websocket/src/rd/: message.rs  mod.rs  session.rs
actix-websocket/src/rds/: cache.rs  context.rs  message.rs  mod.rs  server.rs  session.rs
actix-websocket/src/socket/: message.rs  mod.rs  server.rs  session.rs  ws.rs
actix-websocket/src/store/: cs.rs  ws.rs
collab/: Cargo.toml
collab-studio/: Cargo.toml  build.rs
collab-studio/proto/: patient.proto
collab-studio/src/: handler.rs  main.rs  message.rs  server.rs  session.rs
collaboration/: Cargo.toml
collaboration/src/: server.rs  session.rs
crates/bors/: Cargo.toml
crates/bors/src/: errors.rs  lib.rs
crates/database-schema/: Cargo.toml
crates/mission/: Cargo.toml
crates/mission/src/: lib.rs
crates/mission/src/handlers/: event.rs  mission.rs  mod.rs  task.rs
crates/mission/src/mission/: mod.rs
crates/mission/src/task/: mod.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs  schema.rs
crates/schema/src/repository/: user.rs
crates/schema/src/source/: local_user.rs  mod.rs  user.rs
crates/task/: Cargo.toml
crates/task/src/: lib.rs
crates/task/src/handlers/: event.rs  mod.rs  task.rs
crates/todo/: Cargo.toml
crates/todo/src/: lib.rs
crates/todo/src/handlers/: event.rs  mod.rs  remind.rs  todo.rs
crates/todo/src/scheduler/: mod.rs
crates/utils/: Cargo.toml
crates/utils/src/: claims.rs  config.rs  constants.rs  database.rs  encryption.rs  helpers.rs  lib.rs  middleware.rs  opration.rs  pool.rs  utils.rs  validate.rs
crates/utils/src/config/: mod.rs  structs.rs
crates/utils/src/rate_limit/: mod.rs  rate_limiter.rs
crates/utils/src/settings/: mod.rs  structs.rs
crates/websocket/: Cargo.toml  README.md  docker-compose.yml
crates/websocket/src/: chat.rs  handlers.rs  lib.rs  messages.rs  server.rs  session.rs
crates/websocket/src/entity/: mod.rs
crates/websocket/src/handlers/: user.rs
crates/websocket/src/messages/: mod.rs  user.rs
els/: Cargo.toml
exia-push/: Cargo.toml
exia-websocket/: Cargo.toml  build.rs
exia-websocket-client/: Cargo.toml
exia-websocket-client/src/: main.rs
exia-websocket/src/addr/: mod.rs  rs.rs  ws.rs
halo/: Cargo.toml
halo/src/: lib.rs
innovator/: Cargo.toml  build.rs
innovator/src/: main.rs  seravee.rs
migrations/2022-01-14-071242_create_user/: down.sql  up.sql
migrations/2022-01-14-071251_create_local_user/: down.sql  up.sql
proto/activity/: activity.proto
proto/message/: grpc.proto  message.proto
ptolemaios/: Cargo.toml
ptolemaios/src/generic/: due.rs  header.rs  mod.rs
ptolemaios/src/handlers/: event.rs  mod.rs  remind.rs  task.rs
src/: constants.rs  handler.rs  main.rs  messages.rs  route.rs  routes.rs  server.rs  session.rs  system.rs
src/addr/: ws_actor.rs
src/entity/: platform.rs
src/handlers/: mod.rs  user.rs
src/handlers/v1/: mod.rs
src/websocket/: server.rs  session.rs
src/ws/: mod.rs  session.rs  system.rs
veda/: .env  .env.docker  Cargo.toml  README.md  build.rs  docker-compose.yml
veda-task/: Cargo.toml
veda-task/src/generic/: href.rs  origin.rs
veda-task/src/handlers/: task.rs
veda-web/: Cargo.toml
veda-websocket/: Cargo.toml  client.py
veda-websocket/src/: config.rs  lib.rs
veda-websocket/src/addr/: redis_actor.rs
veda-websocket/src/entity/: mod.rs
veda-websocket/src/handlers/: mod.rs
veda/src/: handler.rs  main.rs  server.rs
veda/src/addr/: grpc.rs  mod.rs  rs.rs  seravee.rs  seravee_actor.rs  ws.rs
veda/src/entity/: activity.rs  event.rs  message_flow.rs  mod.rs  msg.rs  platform.rs
veda/src/websocket/: mod.rs
