[package]
name = "double-zero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [
    
    "crates/bors",
    "crates/database-schema",
    "crates/task",
    "crates/utils",
    "crates/websocket"
]

[dependencies]

actix = "0.12"
actix-cors ="0.6.0-beta.8"
actix-web = "4.0.0-beta.19"
actix-web-actors = "4.0.0-beta.10"
awc = "3.0.0-beta.18"

anyhow = "1"
chrono ={version = "0.4",features = ["serde"]}
dotenv = "0.15"
env_logger = "0.9"
envy = "0.4"
futures = "0.3"
lazy_static = "1"
log = "0.4"
oauth2="4"
rand= "0.8"

thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# meilisearch-sdk = "0.13"
# elasticsearch = "7.14.0-alpha.1"
serde = { version = "1", features = ["derive"] }
[dev-dependencies]
actix-test = "0.1.0-beta.11"


