[package]
name = "double-zero"
version = "0.1.0"
edition = "2021"


[workspace]
members = [
    # "crates/bors",
    "crates/schema",
    "crates/task",
    "crates/utils",
    "crates/websocket"
]


[dependencies]
# double-zero-bors = { version = "0.1", path = "./crates/bors" }
double-zero-task = { version = "0.1", path = "./crates/task" }
double-zero-utils = { version = "0.1", path = "./crates/utils" }
double-zero-websocket = { version = "0.1", path = "./crates/websocket" }

actix = "0.13"
actix-cors ="0.6"
actix-web = "4"
actix-web-actors = "4"
awc = "3"

anyhow = "1"
chrono ={version = "0.4",features = ["serde"]}
env_logger = "0.9"

futures = "0.3"
log = "0.4"
rand= "0.8"

thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# meilisearch-sdk = "0.13"
# elasticsearch = "7.14.0-alpha.1"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
actix-test = "0.1.0-beta.13"


