[package]
name = "actix-websocket"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.11"
actix-web = "4.0.0-beta.5"
actix-web-actors = "4.0.0-beta.4"
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
lazy_static = "1"
rand= "0.8"
redis = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = "0.4"
tonic-health = "0.3"
prost = "0.7"
validator = { version = "0.13", features = ["derive"] }

# for tonic
[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
actix-rt = "2"
env_logger = "0.8"
futures-util = { version = "0.3", default-features = false }