[package]
name = "collab-studio"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.11.0-beta.3"
actix-web = "4.0.0-beta.4"
actix-web-actors = "4.0.0-beta.3"
dotenv = "0.15"
envy = "0.4"
futures = "0.3"
lazy_static = "1"
log = "0.4"
rand="0.8"
serde = { version = "1", features = ["derive"] }
serde_json =  "1"
# tonic = "0.4"
validator = { version = "0.12", features = ["derive"] }

[dev-dependencies]
actix-rt = "2"
env_logger = "0.8"
futures-util = { version = "0.3.7", default-features = false }