[package]
name = "els"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12"
actix-broker = "0.4.1"
actix-cors ="0.6.0-beta.8"
actix-web = "4.0.0-beta.19"
actix-web-actors = "4.0.0-beta.10"
awc = "3.0.0-beta.18"

chrono ={version = "0.4",features = ["serde"]}
# config and log
dotenv = "0.15"
env_logger = "0.9"
envy = "0.4"
futures = "0.3"
lazy_static = "1"
log = "0.4"
oauth2="4"
rand= "0.8"
redis = { version = "0.21", features = ["tokio-comp"] }

# for serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

validator = { version = "0.14", features = ["derive"] }
