[package]
name = "exia-push"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"]}
# config and log
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
futures = "0.3"
lazy_static = "1"
# for grpc
tonic = "0.4"
tonic-health = "0.3"
prost = "0.7"

serde = { version = "1", features = ["derive"] }

[build-dependencies]
tonic-build = "0.4"
