[package]
name = "innovator"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix = "0.12"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"

chrono ={version = "0.4",features = ["serde"]}
# config and log
dotenv = "0.15"
env_logger = "0.8"
envy = "0.4"
futures = "0.3"
lazy_static = "1"
log = "0.4"
rand= "0.8"
rusted_cypher = "1"
# for serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# for grpc
tonic = "0.4"
tonic-health = "0.3"
prost = "0.7"

validator = { version = "0.13", features = ["derive"] }

[build-dependencies]
tonic-build = "0.4"

[dev-dependencies]
actix-rt = "2"
futures-util = { version = "0.3", default-features = false }
