[package]
name = "innovator"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix = "0.12"
actix-web = "4.0.0-beta.12"
actix-web-actors = "4.0.0-beta.7"

chrono ={version = "0.4",features = ["serde"]}
# config and log
dotenv = "0.15"
env_logger = "0.9"
envy = "0.4"
futures = "0.3"
lazy_static = "1"
log = "0.4"
rand= "0.8"
rusted_cypher = "1"
# for serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# for grpc
tonic = "0.6"
tonic-health = "0.5"
prost = "0.9"

validator = { version = "0.14", features = ["derive"] }

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
