[package]
name = "double-zero-bors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix-cors ="0.6.0-beta.8"
actix-web = "4.0.0-beta.19"
actix-web-actors = "4.0.0-beta.10"
awc = "3.0.0-beta.18"
pin-project = "1.0.3"
bytes = "1.0.0"
url = { version = "2", features = ["serde"] }
log = "0.4"

serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
serde_with_macros = "1.4.1"
uuid = { version = "0.8.1", features = ["v4"] } # for attaching input files
 
derive_more = "0.99.9"
mime = "0.3.16"
thiserror = "1"
once_cell = "1.5.0"
never = "0.1.0"
chrono = { version = "0.4.19", default-features = false }
either = "1.6.1"
bitflags = { version = "1.2" }

vecrem = { version = "0.1", optional = true }