[package]
name = "double-zero-bors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
actix-cors ="0.6"
actix-web = "4"
actix-web-actors = "4"
awc = "3"
pin-project = "1.0.3"
bytes = "1.0.0"
url = { version = "2", features = ["serde"] }
log = "0.4"
