[package]
name = "double-zero-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "8"
futures = "0.3"
itertools = "0.10"
lettre = "0.10.0-rc.4"
once_cell = "1"
openssl = "0.10"
percent-encoding = "2"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
tracing-error = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }



