[package]
name = "double-zero-websocket"
version = "0.0.1"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2021"

[dependencies]
double-zero-utils = { version = "0.0.1", path = "../utils" }
actix = "0.12"
actix-broker = "0.4.1"
actix-cors ="0.6.0-beta.8"
actix-web = "4.0.0-beta.19"
actix-web-actors = "4.0.0-beta.10"
awc = "3.0.0-beta.18"
anyhow = "1"
chrono ={version = "0.4",features = ["serde"]}

diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}

rand = "0.8"
# for serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
actix-test = "0.1.0-beta.11"