[package]
name = "double-zero-websocket"
version = "0.0.1"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2021"

[dependencies]
double-zero-utils = { version = "0.0.1", path = "../utils" }
actix = "0.12"
actix-cors ="0.6.0-beta.8"
actix-web = "4.0.0-rc.3"
actix-web-actors = "4.0.0-beta.12"
awc = "3.0.0-beta.21"
anyhow = "1"
chrono ={version = "0.4",features = ["serde"]}

# diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}

rand = "0.8"
redis = { version = "0.21", features = ["cluster","tokio-comp"] }
# for serialize
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[dev-dependencies]
actix-test = "0.1.0-beta.13"