[package]
name = "double-zero-websocket"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2021"

[dependencies]
double-zero-utils = { version = "0.1", path = "../utils" }
actix = "0.13"
actix-cors ="0.6"
actix-web = "4"
actix-web-actors = "4"
awc = "3"
anyhow = "1"
chrono ={version = "0.4",features = ["serde"]}

rand = "0.8"
redis = { version = "0.21", features = ["cluster","tokio-comp"] }
# for serialize
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[dev-dependencies]
actix-test = "0.1.0-beta.13"